# Pico-DiRPi

./: CMakeLists.txt  README.md  hw_config.c  main.c  net_util.c  net_util.h  settings.c  settings.h  struct.h  util.c  util.h  ws.c  ws.h
